# scpr

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/: crane.nix  devshell.nix  toolchain.nix
src/: api.rs  app.rs  cli.rs  date.rs  error.rs  main.rs  model.rs  storage.rs  validation.rs
