[package]
name = "scpr"
version = "0.1.0"
edition = "2024"
description = "The simplest cli app to display prayer schedules for Indonesian regions"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros", "local-offset"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = { version = "0.9.11", features = ["serde"] }
