[package]
name = "scpr"
version = "0.1.0"
edition = "2024"
description = "The simplest cli app to display prayer schedules for Indonesian regions"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
pager = "0.16.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminal_size = "0.4.3"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros", "local-offset"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = { version = "0.9.11", features = ["serde"] }
which = "8.0.0"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
